--- a/src/components/navbar/navbar.css
+++ b/src/components/navbar/navbar.css
@@ -5,7 +5,7 @@
     padding: 2rem 3rem;
     height: 15vh;
     z-index: 1;
-    background: #222835;
+    /* background: #222835; */
 }
 
 .gpt3__navbar-links {
